--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
 <title>Response Image</title>
 </head>
 <body>
-图片:
-<img src="./a.jpg">
+<p>1:原图(在浏览器中缩小):<br>
+<img src="./demo.jpg" width="100%"></p>
+<p>2:按比例缩小至500px:<br>
+<img src="./demo.jpg/reduce:500"></p>
+<p>3:按比例缩小至500px,然后截取马和桥:<br>
+<img src="./demo.jpg/reduce:500/crop:135,145,335,130"></p>
+<p>4:截取骑马部分:<br>
+<img src="./demo.jpg/crop:1000,1000,800,600"></p>
+<p>4:截取骑马部分,像素太虚，缩小一半:<br>
+<img src="./demo.jpg/crop:1000,1000,800,600/reduce:400,300"></p>
+<p>6:再缩小一半:<br>
+<img src="./demo.jpg/crop:1000,1000,800,600/reduce:400,300/reduce:200"></p>
+<p>7:不按比例缩放:<br>
+<img src="./demo.jpg/reduce:500,500"></p>
+
+<p>文森特·威廉·梵·高(Vincent Willem van Gogh，1853-1890)，中文又称"凡高"，荷兰后印象派画家。出生于新教牧师家庭，是后印象主义的先驱，并深深地影响了二十世纪艺术，尤其是野兽派与表现主义。
+其作品受法国现实主义画家米勒的影响。其实梵·高早期以灰暗色系进行创作，直到他在巴黎遇见了印象派与新印象派，融入了他们的鲜艳色彩与画风，创造了他独特的个人画风。他最著名的作品多半是他在生前最后两年创作的，期间梵高深陷精神疾病中，最后在他37岁那年将他导向自杀一途，葬于瓦兹河畔的公墓。在梵高去世之后，其作品：《星夜》、《向日葵》与《有乌鸦的麦田》等，已跻身于全球最著名最珍贵的艺术作品的行列。 梵高的作品目前主要收纳在法国的奥赛美术馆，以及苏黎世的kunshaus美术馆。</p>
+
 </body>
 </html>
